--- a/package.json
+++ b/package.json
@@ -14,9 +14,6 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.15",
-    "@types/react": "^16.14.3",
-    "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.27.2",
@@ -66,7 +63,10 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.6.0"
+    "@capacitor/cli": "3.6.0",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6"
   },
   "description": "An Ionic project"
 }
